# typed_sentinels

./: .editorconfig  .envrc  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .shellcheckrc  .yamlfmt  README.md  biome.json  cspell.config.jsonc  devenv.nix  devenv.yaml  mkdocs.yml  pyproject.toml  pyrightconfig.json
.config/: .markdownlint.yml  .prettierrc.yml  biome.jsonc  cspell.txt  ruff.toml  taplo.toml  treefmt.nix  yamlfmt.yml
.github/workflows/: build-and-publish.yml  deploy-documentation.yml  pytest.yml  test-build-and-publish.yml
_meta/config/: .markdownlint.yml  biome.jsonc  cspell.txt  ruff.toml  trufflehog_exclude.txt  yamlfmt.yml
_meta/nix/: git-hooks.nix  scripts.nix  treefmt.nix
docs/: SUMMARY.md  advanced-usage.md  api.md  best-practices.md  getting-started.md  index.md
docs/reference/: index.md
docs/snippets/: snippets.py
examples/: threaded_stress_test.py
scripts/: activate.sh  autopin_gh_actions.py  gen_ref_pages.py
src/typed_sentinels/: __init__.py  __init__.pyi  _core.py  _core.pyi  _exceptions.py  _exceptions.pyi
tests/: _objects.py  conftest.py  smoke_test.py  test_sentinels.py  test_threading.py  test_typing.py  test_typing_ide_integration.py
