[project.urls]
  documentation = "https://typed-sentinels.blockmage.dev"
  repository    = "https://github.com/blockmage/typed_sentinels"

[project]
  description     = "Statically-typed sentinel objects with singleton qualities."
  name            = "typed-sentinels"
  readme          = "README.md"
  requires-python = ">=3.9"
  version         = "1.1.0"

  authors = [
    { email = "opensource+typed-sentinels@blockmage.dev", name = "Blockmage Developer" },
    { email = "opensource@blockmage.dev", name = "Blockmage Ltd" },
  ]

  maintainers = [
    { email = "opensource+typed-sentinels@blockmage.dev", name = "Blockmage Developer" },
  ]

  dependencies = [  ]

[dependency-groups]
  dev = [
    "commitizen>=4.0.0",
    "docformatter>=1.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.12.0",
  ]

  docs = [
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs>=1.0.0",
    "mkdocstrings-python>=1.18.2",
    "mkdocstrings>=0.30.0",
    "pymdown-extensions>=10.19.1",
  ]

  test = [
    "coverage>=7.0.0",
    "pyright>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest>=8.0.0",
  ]

# -------------------------------- build system --------------------------------
[build-system]
  build-backend = "uv_build"
  requires      = [ "uv_build>=0.8.11,<0.9.0" ]

# ------------------------------- tool: coverage -------------------------------
[tool.coverage.report]
  skip_empty = "true"

  exclude_also = [
    "\\.\\.\\.",
    "\\.append(.*)",
    "cast(.*)",
    "if TYPE_CHECKING",
    "if __name__ == .__main__.:",
    "if errors",
    "if failures",
    "if hasattr(.*)",
    "if missing",
    "if thread.*",
    "msg =.*",
    "raise AssertionError",
  ]

[tool.coverage.html]
  directory = "reports/coverage/html"

[tool.coverage.json]
  output = "reports/coverage/json/coverage.json"

[tool.coverage.xml]
  output = "reports/coverage/xml/coverage.xml"

# -------------------------------- tool: pytest --------------------------------
[tool.pytest.ini_options]
  addopts = [
    "--cov-report=html",
    "--cov-report=json",
    "--cov-report=xml",
    "--cov=typed_sentinels",
    "--import-mode=importlib",
    "-s",
    "-vv",
  ]

  norecursedirs = [ ".devenv" ]
  python_files  = [ "test_*.py" ]
  testpaths     = [ "tests" ]

# ---------------------------------- tool: uv ----------------------------------
[tool.uv]
  compile-bytecode = true
  managed          = true

  [tool.uv.pip]
    compile-bytecode = true
    require-hashes   = true
